--- a/Components/src/assets/scss/element/_tab.scss
+++ b/Components/src/assets/scss/element/_tab.scss
@@ -10,6 +10,12 @@
       flex-grow: 1;
       min-width: initial;
     }
+
+    @media (max-width: 374px) {
+      .tab-list {
+        padding: 0;
+      }
+    }
   }
 
   &.iconed {
